--- a/index.html
+++ b/index.html
@@ -1,9 +1,19 @@
 <!DOCTYPE html>
 <html lang="es">
 <head>
+    <!-- Metadatos de la pagian web -->
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="author" content="WebSTOW"/>
+    <meta name="description" content="Pagiana web para masajes a domicilio." />
+    <meta name="keywords" content="HTML, CSS, JavaScript">
+    <meta name="revised" content="11/05/2021" />
+    
+    <!-- Links de la pagina web -->
+    <link rel="icon" href="/images/iconoPatriwatton.jpg"/>
+
+
     <title>Patriwatton</title>
 </head>
 <body>
