Añadiod css y html

--- a/index.html
+++ b/index.html
@@ -23,11 +23,16 @@
     <script src="https://kit.fontawesome.com/f9c11574c0.js" crossorigin="anonymous"></script>
 </head>
 <body>
+    
+    <!-- Imagen de baner principal -->
     <div class="imagenDeFondoInicio">
+        <!-- Barra de navegacion -->
         <nav class="navBar">
+            <!-- Links de la barra de navegacion -->
             <div class="linksNavbar">
-                <a href="#">Inicio</a>
+                <a class="primerLinkNavbar" href="#">Inicio</a>
                 <a href="#">Masajes</a>
+                <!-- Logo en la barra de navegacion -->
                 <div class="navBarLogo">
                     <a href="#" class="logo" >
                         <img class="imgLogo" src="/images/iconoPatriwatton.jpg" alt="Logo">
@@ -37,19 +42,40 @@
                 <a href="#">Sobre mi</a>
             </div>
         </nav> 
+
+
+        <!-- Encabezado de la pagiana -->
         <div class="encabezado">
-            <div class="titulo">
+            <!-- Titulo del encabezado -->
+            <div class="tituloEncabezado">
                 <h1>Masajista</h1>
             </div>
-            <div class="subtitulo">
+            <!-- Subtitulo del encabezado -->
+            <div class="subtituloEncabezado">
                 <h2>Masoterapeuta, lifoterapeuta y Quiromasajista</h2>
             </div>
         </div>
+        <!-- Icono para indicar que hay que hacer scroll -->
         <div class="iconoScroll">
             <i class="fas fa-caret-down"></i>
-
         </div>
     </div>
-    
+
+
+    <div class="contenedorPrincipalDescripcion">
+        <section class="textoYImagenDescripcion">
+            <div class="textoDescripcion">
+                <div class="tituloDescripcion">
+                    Sobre mi
+                </div>
+                <div class="parrafoDescripcion">
+                    Nunc bibendum nunc elit, id sollicitudin mi semper eu. Nunc vel dui placerat, tincidunt tellus non, blandit nisi. Quisque pretium nunc non nisl hendrerit, vel rhoncus sapien faucibus. Vestibulum vestibulum arcu nec interdum rhoncus. Suspendisse tellus lorem, molestie ut dui et, ornare commodo tellus. Sed vitae ex eros. Praesent porttitor scelerisque nisl, quis condimentum ante consequat sed. In cursus nulla et ornare malesuada. Nam sit amet aliquet erat. Nullam ipsum leo, fermentum sed neque vel, malesuada laoreet justo. Nulla sit amet nibh nec orci lobortis blandit.
+                </div>
+            </div>
+            <div class="imagenDescripcion">
+                <img src="https://images.unsplash.com/photo-1515377905703-c4788e51af15?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=750&q=80" alt="" srcset="">
+            </div>
+        </section>
+    </div>
 </body>
 </html>
