--- a/index.html
+++ b/index.html
@@ -11,14 +11,14 @@
     <meta name="revised" content="11/05/2021" />
     
     <!-- Links de la pagina web -->
-    <link rel="icon" href="/images/iconoPatriwatton.jpg"/>
+    <link rel="icon" href="./images/iconoPatriwatton.jpg"/>
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <link href="https://fonts.googleapis.com/css2?family=Playfair+Display:ital,wght@0,400;0,500;0,600;0,700;0,800;0,900;1,400;1,500;1,600;1,700;1,800;1,900&display=swap" rel="stylesheet">
     
     <title>Patriwatton</title>
 
-    <link rel="stylesheet" href="/styles/reseteoGeneral.css">
-    <link rel="stylesheet" href="/styles/estilosIndex.css">
+    <link rel="stylesheet" href="./styles/reseteoGeneral.css">
+    <link rel="stylesheet" href="./styles/estilosIndex.css">
 
     <script src="https://kit.fontawesome.com/f9c11574c0.js" crossorigin="anonymous"></script>
 </head>
@@ -35,7 +35,7 @@
                 <!-- Logo en la barra de navegacion -->
                 <div class="navBarLogo">
                     <a href="#" class="logo" >
-                        <img class="imgLogo" src="/images/iconoPatriwatton.jpg" alt="Logo">
+                        <img class="imgLogo" src="./images/iconoPatriwatton.jpg" alt="Logo">
                     </a>
                 </div>
                 <a href="#">Contacto</a>
